# ict.esa.mic.v22_2223

./: .gitignore  CMakeLists.txt  README.md
arduino-core-lib/: .gitignore  CMakeLists.txt
arduino/etc/: extratargets-avr.cmake  toolchain-avr.cmake
projects/Adafruit-GFX-Library-1.11.3/: .gitignore  CMakeLists.txt
projects/Adafruit-GFX-Library-1.11.3/src/: Adafruit_GFX.cpp  Adafruit_GFX.h
projects/Adafruit-GFX-Library-1.11.3/src/fontconvert/: fontconvert.c
projects/Adafruit_BusIO-1.14.1/: CMakeLists.txt
projects/Adafruit_ILI9341-1.5.12/: CMakeLists.txt
projects/IR/: CMakeLists.txt
projects/IR/src/: IR.cpp
projects/LCDWIKI_GUI/: CMakeLists.txt
projects/LCDWIKI_GUI/src/: LCDWIKI_GUI.cpp  LCDWIKI_GUI.h  LCDWIKI_font.c
projects/LCDWIKI_SPI/: CMakeLists.txt
projects/LCDWIKI_SPI/src/: LCDWIKI_SPI.cpp
projects/SPI/: CMakeLists.txt
projects/USARTlib/: CMakeLists.txt
projects/USARTlib/src/: main.cpp
projects/adafruit/: CMakeLists.txt
projects/adafruit/src/: main.cpp
projects/alfabet/: CMakeLists.txt
projects/alfabet/src/: main.cpp
projects/blink/: CMakeLists.txt
projects/blink-serial/: CMakeLists.txt
projects/blink-serial/src/: main.cpp
projects/blink/src/: main.cpp
projects/college_2-1/: CMakeLists.txt
projects/college_2-1/src/: main.cpp
projects/college_2-2/: CMakeLists.txt
projects/college_2-2/src/: main.cpp
projects/college_2-20/: CMakeLists.txt
projects/college_2-20/src/: main.cpp
projects/college_2-21/: CMakeLists.txt
projects/college_2-21/src/: main.cpp
projects/college_2-3/: CMakeLists.txt
projects/college_2-3/src/: main.cpp
projects/college_2-4/: CMakeLists.txt
projects/college_2-4/src/: main.cpp
projects/college_2-5/: CMakeLists.txt
projects/college_2-5/src/: main.cpp
projects/college_2-8/: CMakeLists.txt
projects/college_2-8/src/: main.c
projects/college_2-9/: CMakeLists.txt
projects/college_2-9/src/: main.c
projects/college_3-10/: CMakeLists.txt
projects/college_3-10/src/: main.cpp
projects/college_3-11/: CMakeLists.txt
projects/college_3-11/src/: main.cpp
projects/college_3-7/: CMakeLists.txt
projects/college_3-7/src/: main.cpp
projects/college_3-9/src/: main.cpp
projects/college_4-10/: CMakeLists.txt
projects/college_4-10/src/: main.cpp
projects/college_4-11/: CMakeLists.txt
projects/college_4-11/src/: main.cpp
projects/college_4-7/: CMakeLists.txt
projects/college_4-7/src/: main.cpp
projects/college_4-8/: CMakeLists.txt
projects/college_4-8/src/: main.cpp
projects/college_4-9/: CMakeLists.txt
projects/college_4-9/src/: main.cpp
projects/college_5-13/: CMakeLists.txt
projects/college_5-13/src/: main.cpp
projects/college_5-14/: CMakeLists.txt
projects/college_5-14/src/: main.cpp
projects/college_5-15/: CMakeLists.txt
projects/college_5-15/src/: main.cpp
projects/college_5-16/: CMakeLists.txt
projects/college_5-16/src/: main.cpp
projects/college_5-17/: CMakeLists.txt
projects/college_5-17/src/: main.cpp
projects/college_5-18/: CMakeLists.txt
projects/college_5-18/src/: main.cpp
projects/college_5-19/: CMakeLists.txt
projects/college_5-19/src/: main.cpp
projects/college_6-1/: CMakeLists.txt
projects/college_6-1/src/: main.cpp
projects/college_6-2/: CMakeLists.txt
projects/college_6-2/src/: main.cpp
projects/college_6-3/: CMakeLists.txt
projects/college_6-3/src/: main.cpp
projects/college_6-4/: CMakeLists.txt
projects/college_6-4/src/: main.cpp
projects/college_7-1/: CMakeLists.txt
projects/college_7-1/src/: main.cpp
projects/college_7-2/: CMakeLists.txt
projects/college_7-2/src/: main.cpp
projects/college_7-3/: CMakeLists.txt
projects/college_7-3/src/: main.cpp
projects/detectielus/: CMakeLists.txt
projects/detectielus/src/: main.cpp
projects/lcd/: CMakeLists.txt
projects/lcd/src/: main.cpp
projects/nunchuk/: CMakeLists.txt
projects/nunchuk/src/: Nunchuk.cpp  Nunchuk.h
projects/rot13/: CMakeLists.txt
projects/rot13/src/: main.cpp
projects/stopwatch/: CMakeLists.txt
projects/stopwatch/src/: main.cpp  stopwatch.cpp
projects/theremin/: CMakeLists.txt
projects/theremin/src/: theremin.cpp
projects/wire/: CMakeLists.txt  main.cpp
